--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,10 +4,10 @@
 %table#movies
   %thead
     %tr
-      %th
+      %th#title_header
         = link_to 'Movie Title', movies_path(:sort => 'title')
       %th Rating
-      %th
+      %th#release_date_header
         = link_to 'Release Date', movies_path(:sort => 'date')
       %th More Info
   %tbody
