--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,11 +4,12 @@
 %table#movies
   %thead
     %tr
-      %th#title_header
-        = link_to 'Movie Title', movies_path(:sort => 'title')
+      %th
+        = link_to 'Movie Title', movies_path(:sort => 'title'), :id => 'title_header'
       %th Rating
-      %th#release_date_header
-        = link_to 'Release Date', movies_path(:sort => 'date')
+      %th
+        = link_to 'Release Date', movies_path(:sort => 'date'), :id => 'release_date_header'
+          
       %th More Info
   %tbody
     - @movies.each do |movie|
