--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,11 +4,19 @@
 %table#movies
   %thead
     %tr
-      %th
-        = link_to 'Movie Title', movies_path(:sort => 'title'), :id => 'title_header'
+      - if  params[:title_css] == 'hilite'
+        %th.hilite
+          = link_to 'Movie Title', movies_path(:sort => 'title'), :id => 'title_header'
+      -else
+        %th
+          = link_to 'Movie Title', movies_path(:sort => 'title'), :id => 'title_header'
       %th Rating
-      %th
-        = link_to 'Release Date', movies_path(:sort => 'date'), :id => 'release_date_header'
+      - if  params[:date_css] == 'hilite'
+        %th.hilite
+          = link_to 'Release Date', movies_path(:sort => 'date'), :id => 'release_date_header'
+      -else
+        %th
+          = link_to 'Release Date', movies_path(:sort => 'date'), :id => 'release_date_header'
           
       %th More Info
   %tbody
